--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     font-family: "monospace";
-    font-size: 14pt;
+    font-size: 12pt;
     font-weight: bold;
     border-radius: 0px;
     transition-property: background-color;
@@ -26,17 +26,18 @@ window > box {
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 5px;
+    margin-bottom: 5px;
     background-color: #3b4252;
 }
 #workspaces {
     padding-left: 0px;
-    padding-right: 4px;
+    padding-right: 5px;
 }
 #workspaces button {
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 6px;
-    padding-right: 6px;
+    padding-left: 5px;
+    padding-right: 5px;
     color: #d8dee9;
 }
 #workspaces button.focused {
@@ -57,12 +58,12 @@ tooltip label {
     color: #d8dee9;
 }
 #custom-launcher {
-    font-size: 20px;
-    padding-left: 8px;
-    padding-right: 6px;
-    color: #88c0d0;
+    font-size: 25px;
+    padding-left: 0px;
+    padding-right: 0px;
+    color: #b48ead;
 }
-#mode, #clock, #memory, #cpu, #mpd, #backlight, #wireplumber, #network, #battery, #custom-powermenu, #custom-cava-internal {
+#mode, #clock, #memory, #cpu, #mpd, #backlight, #wireplumber, #battery, #custom-powermenu, #custom-cava-internal {
     padding-left: 10px;
     padding-right: 10px;
 }
@@ -82,6 +83,8 @@ tooltip label {
     color: #E9C98A;
 }
 #network {
+    padding-left: 10px;
+    padding-right: 5px;
     color: #99CC99;
 }
 #network.disconnected {
@@ -94,15 +97,21 @@ tooltip label {
     color: #d8dee9;
 }
 #custom-powermenu {
+    font-size: 25px;
+    padding-left: 0px;
+    padding-right: 0px;
     color: #bf616a;
 }
 #tray {
-    padding-right: 8px;
+    padding-right: 10px;
     padding-left: 10px;
 }
 #tray menu {
     background: #3b4252;
     color: #d8dee9;
+}
+#mpd.playing {
+    font-style: italic;
 }
 #mpd.paused {
     /* font-style: italic; */
