--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -9,7 +9,7 @@
 @keyframes blink_red {
     to {
         background-color: #bf616a;
-        color: #2e3440;
+        color: #3b4252;
     }
 }
 .warning, .critical, .urgent {
@@ -21,18 +21,17 @@
 }
 window#waybar {
     background-color: transparent;
-    opacity: 0.96;
 }
 window > box {
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
-    background-color: #3b4252;
 }
 #workspaces {
     padding-left: 0px;
     padding-right: 5px;
+    background-color: #3b4252;
 }
 #workspaces button {
     padding-top: 5px;
@@ -63,10 +62,12 @@ tooltip label {
     padding-left: 12px;
     padding-right: 16px;
     color: #b48ead;
+    background-color: #3b4252;
 }
 #mode, #clock, #memory, #cpu, #mpd, #backlight, #wireplumber, #battery, #custom-powermenu, #custom-cava-internal {
     padding-left: 10px;
     padding-right: 10px;
+    background-color: #3b4252;
 }
 #memory {
     color: #81a1c1;
@@ -87,6 +88,7 @@ tooltip label {
     padding-left: 10px;
     padding-right: 5px;
     color: #99CC99;
+    background-color: #3b4252;
 }
 #network.disconnected {
     color: #d8dee9;
@@ -107,6 +109,7 @@ tooltip label {
     font-size: 16px;
     padding-right: 8px;
     padding-left: 10px;
+    background-color: #3b4252;
 }
 #idle_inhibitor.activated {
     color: #a3be8c;
@@ -114,6 +117,7 @@ tooltip label {
 #tray {
     padding-right: 10px;
     padding-left: 10px;
+    background-color: #3b4252;
 }
 #tray menu {
     background: #3b4252;
