--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -9,7 +9,7 @@
 @keyframes blink_red {
     to {
         background-color: #bf616a;
-        color: #3b4252;
+        color: #d8dee9;
     }
 }
 .warning, .critical, .urgent {
@@ -31,14 +31,13 @@ window > box {
 #workspaces {
     padding-left: 0px;
     padding-right: 5px;
-    background-color: #3b4252;
 }
 #workspaces button {
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 5px;
     padding-right: 5px;
-    color: #d8dee9;
+    color: #3b4252;
 }
 #workspaces button.focused {
     background-color: #5e81ac;
@@ -48,56 +47,29 @@ window > box {
     color: #bf616a;
 }
 #workspaces button:hover {
-    background-color: #81a1c1;
-    color: #d8dee9;
+    background-color: #5e81ac;
+    color: #3b4252;
 }
 tooltip {
     background: #3b4252;
 }
 tooltip label {
-    color: #d8dee9;
+    color: #3b4252;
 }
 #custom-launcher {
     font-size: 16px;
     padding-left: 12px;
     padding-right: 16px;
     color: #b48ead;
-    background-color: #3b4252;
 }
-#mode, #clock, #memory, #cpu, #mpd, #backlight, #wireplumber, #battery, #custom-powermenu, #custom-cava-internal {
+#mode, #clock, #memory, #cpu, #mpd, #backlight, #wireplumber, #battery, #custom-cava-internal, #tray {
     padding-left: 10px;
     padding-right: 10px;
-    background-color: #3b4252;
-}
-#memory {
-    color: #81a1c1;
-}
-#cpu {
-    color: #b48ead;
-}
-#clock {
-    color: #d8dee9;
-}
-#backlight {
-    color: #a3be8c;
-}
-#wireplumber {
-    color: #E9C98A;
+    color: #3b4252;
 }
 #network {
     padding-left: 10px;
     padding-right: 5px;
-    color: #99CC99;
-    background-color: #3b4252;
-}
-#network.disconnected {
-    color: #d8dee9;
-}
-#battery.charging, #battery.full, #battery.discharging {
-    color: #d08770;
-}
-#battery.critical:not(.charging) {
-    color: #d8dee9;
 }
 #custom-powermenu {
     font-size: 16px;
@@ -109,29 +81,15 @@ tooltip label {
     font-size: 16px;
     padding-right: 8px;
     padding-left: 10px;
-    background-color: #3b4252;
+    color: #3b4252;
 }
 #idle_inhibitor.activated {
-    color: #a3be8c;
-}
-#tray {
-    padding-right: 10px;
-    padding-left: 10px;
-    background-color: #3b4252;
+    color: #5e81ac;
 }
 #tray menu {
-    background: #3b4252;
-    color: #d8dee9;
+    background: #d8dee9;
+    color: #3b4252;
 }
 #mpd.playing {
     font-style: italic;
-}
-#mpd.paused {
-    /* font-style: italic; */
-}
-#mpd.stopped {
-    background: transparent;
-}
-#mpd {
-    color: #d8dee9;
 }
