--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -1,9 +1,9 @@
 window {
     margin: 0px;
-    border: 2px solid #4c566a;
+    border: 3px solid #5e81ac;
     opacity: 0.9;
     border-radius: 0px;
-    background-color: #3b4252;
+    background-color: #d8dee9;
     font-family: monospace;
     font-size: 18px;
 }
@@ -11,25 +11,25 @@ window {
 #input {
     margin: 5px;
     border: 1px solid #3b4252;
-    color: #eceff4;
-    background-color: #3b4252;
+    color: #3b4252;
+    background-color: #d8dee9;
 }
 
 #input image {
-    color: #eceff4;
+    color: #3b4252;
 }
 
 #inner-box {
     margin: 5px;
     border: none;
-    background-color: #3b4252;
+    background-color: #d8dee9;
 }
 
 #outer-box {
     margin: 5px;
     border: none;
     opacity: 0.9;
-    background-color: #3b4252;
+    background-color: #d8dee9;
 }
 
 #scroll {
@@ -40,16 +40,16 @@ window {
 #text {
     margin: 5px;
     border: none;
-    color: #eceff4;
+    color: #3b4252;
 } 
 
 #entry:selected {
-    background-color: #4c566a;
+    background-color: #eceff4;
     font-weight: normal;
 }
 
 #text:selected {
-    background-color: #4c566a;
+    background-color: #eceff4;
     font-weight: normal;
 }
 
