--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -51,10 +51,7 @@ window > box {
     color: #3b4252;
 }
 tooltip {
-    background: #3b4252;
-}
-tooltip label {
-    color: #3b4252;
+    background: #d8dee9;
 }
 #custom-launcher {
     font-size: 16px;
