--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -67,6 +67,7 @@ tooltip {
 #network {
     padding-left: 10px;
     padding-right: 5px;
+    color: #3b4252;
 }
 #custom-powermenu {
     font-size: 16px;
@@ -89,4 +90,5 @@ tooltip {
 }
 #mpd.playing {
     font-style: italic;
+    color: #3b4252;
 }
