--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -3,16 +3,16 @@ window {
     border: 3px solid #5e81ac;
     opacity: 0.9;
     border-radius: 0px;
-    background-color: #d8dee9;
+    background-color: #3b4252;
     font-family: monospace;
     font-size: 18px;
 }
 
 #input {
     margin: 5px;
-    border: 1px solid #3b4252;
-    color: #3b4252;
-    background-color: #d8dee9;
+    border: 1px solid #eceff4;
+    color: #eceff4;
+    background-color: #3b4252;
 }
 
 #input image {
@@ -22,14 +22,14 @@ window {
 #inner-box {
     margin: 5px;
     border: none;
-    background-color: #d8dee9;
+    background-color: #3b4252;
 }
 
 #outer-box {
     margin: 5px;
     border: none;
     opacity: 0.9;
-    background-color: #d8dee9;
+    background-color: #3b4252;
 }
 
 #scroll {
@@ -40,16 +40,16 @@ window {
 #text {
     margin: 5px;
     border: none;
-    color: #3b4252;
+    color: #eceff4;
 } 
 
 #entry:selected {
-    background-color: #eceff4;
+    background-color: #4c566a;
     font-weight: normal;
 }
 
 #text:selected {
-    background-color: #eceff4;
+    background-color: #4c566a;
     font-weight: normal;
 }
 
