update font name

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "SarasaTermSC Nerd Font";
+    font-family: "Sarasa Term SC";
     font-size: 12pt;
     font-weight: bold;
     border-radius: 0px;
